<resources>
    <string name="app_name">RaCo</string>

    <string name="hello_home_fragment">Hello home fragment</string>
    <string name="hello_addplayers_fragment">Hello addplayers fragment</string>
    <string name="hello_addtrainings_fragment">Hello addtrainings fragment</string>
    <string name="hello_viewtrainings_fragment">Hello viewtrainings fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_settings_fragment">Hello settings fragment</string>
    <string name="hello_logout_fragment">Hello logout fragment</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="i_forgot_my_password">Reset my password</string>
    <string name="email">email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="reset_password">Reset Password</string>
    <string name="retype_password">retype password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="create_your_account">Register as Coach</string>
    <string name="sign_in">Sign In</string>
    <string name="email_address">Email address</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="welcome_to_raco">Welcome to RaCo</string>
    <string name="agreeing_to_the_terms_and_conditions">By clicking Register you are agreeing to the Terms and Conditions.</string>
    <string name="retype_your_password">Retype your password</string>
    <string name="reset_your_password">Reset your Password</string>
    <string name="add_players">Add Players</string>
    <string name="add_players_to_your_team">Add players to your team</string>
    <string name="fill_in_your_details_below">Fill in your details below</string>
</resources>
