<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="addPlayerViewModel"
            type="com.example.raco.ui.viewmodels.AddPlayerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.views.navigationdrawer.AddPlayersFragment">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_for_screen_in_navigation_drawer"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/textAddPlayers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/add_players_to_your_team"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="@+id/view"
            tools:layout_editor_absoluteX="42dp" />

        <EditText
            android:id="@+id/playerFirstName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/background_for_input_dark"
            android:hint="@string/first_name"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorTextHint"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/textAddPlayers" />

        <EditText
            android:id="@+id/playersLastName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/background_for_input_dark"
            android:hint="@string/last_name"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorTextHint"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/playerFirstName" />

        <EditText
            android:id="@+id/playerEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/background_for_input_dark"
            android:hint="@string/email_address"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorTextHint"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/playersLastName" />

        <Button
            android:id="@+id/buttonAddPlayers"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/background_for_button_in_navigation_drawer"
            android:text="@string/add_players"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryLogin"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/playerEmail" />

        <androidx.recyclerview.widget.RecyclerView

            android:id="@+id/players_recyclerview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonAddPlayers" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>